# FASTAPI_ZERO

./: .coveragerc  .env-example  .gitignore  README.md  pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 077fd46a55e4_create_users_table.py  18e46880a96b_add_updated_at_created_at_todos.py  90471084645e_exercicio_02_aula_04.py  e3622a4daa64_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_direct_calls.py  test_security.py  test_todo.py  test_users.py
